Fix T88524: GPencil PDF does not take into account the marker camera

The camera was not checked before doing the export.