source/blender/io/gpencil/intern/gpencil_io_base.cc
@@ -41,6 +41,7 @@
 #include "BKE_gpencil_geom.h"
 #include "BKE_main.h"
 #include "BKE_material.h"
+#include "BKE_scene.h"
 
 #include "UI_view2d.h"
 
@@ -69,18 +70,21 @@ GpencilIO::GpencilIO(const GpencilIOParams *iparams)
   cfra_ = iparams->frame_cur;
 
   /* Calculate camera matrix. */
-  prepare_camera_params(iparams);
+  prepare_camera_params(scene_, iparams);
 }
 
-void GpencilIO::prepare_camera_params(const GpencilIOParams *iparams)
+void GpencilIO::prepare_camera_params(Scene *scene, const GpencilIOParams *iparams)
 {
   params_ = *iparams;
   const bool is_pdf = params_.mode == GP_EXPORT_TO_PDF;
   const bool any_camera = (params_.v3d->camera != nullptr);
   const bool force_camera_view = is_pdf && any_camera;
 
+  /* Ensure camera switch is applied. */
+  BKE_scene_camera_switch_update(scene);
+
   /* Calculate camera matrix. */
-  Object *cam_ob = params_.v3d->camera;
+  Object *cam_ob = scene->camera;
   if (cam_ob != nullptr) {
     /* Set up parameters. */
     CameraParams params;
